--- a/index.html
+++ b/index.html
@@ -12,5 +12,16 @@
             <h2>NIM : 6701223082</h2>
             <h2>Kelas : D3SI 46-01</h2>
         </div>
+
+        <!-- SOAL NOMOR 2 -->
+        <div>
+            <input type="text" id="jumlah" placeholder="Jumlah Buku">
+            <select id="'buku">
+                <option value="sherlok">Sherlok</option>
+                <option value="lupin">Lupin</option>
+                <option value="aladin">Aladin</option>
+            </select>
+            <button onclick></button>
+        </div>
     </body>
 </html>
