--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html lang="Id">
     <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Profil dan Peminjaman Buku</title>
+        <script>
+            // SOAL NOMOR 3
+            function cekBuku() {
+                var jumlah = document.getElementById('jumlah').value;
+                var bukuDipilih = document.getElementById('buku').value;
+            }
+        </script>
     </head>
 
     <!-- SOAL NOMOR 1 -->
