--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
                 var jumlah = document.getElementById('jumlah').value;
                 var bukuDipilih = document.getElementById('buku').value;
             }
+
+            // SOAL NOMOR 4
+            let buku = [
+                {"nama": "sherlock", "jumlah":2},
+                {"nama": "lupin", "jumlah":2},
+                {"nama": "aladin", "jumlah":2},
+            ]
         </script>
     </head>
 
