--- a/index.html
+++ b/index.html
@@ -1,40 +1,41 @@
 <!DOCTYPE html>
 <html lang="Id">
     <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Profil dan Peminjaman Buku</title>
-        <script>
-            // SOAL NOMOR 3
-            function cekBuku() {
-                var jumlah = document.getElementById('jumlah').value;
-                var bukuDipilih = document.getElementById('buku').value;
-                // SOAL NOMOR 5
-                if (jumlah === '' || parseInt(jumlah) <= 0) {
-                    alert('Jumlah tidak boleh kosong atau Nol!');
-                    return;
-                }
-                // NOMOR 6
-                var bukuTersedia = buku.find(b => b.nama === bukuDipilih);
-                if (!bukuTersedia) {
-                    alert('Buku tidak ditemukan!');
-                    return;
-                }
-                // NOMOR 7
-                if (parseInt(jumlah) > bukuTersedia.jumlah) {
-                    alert('Jumlah buku tidak tersedia!');
-                    return;
-                }
-            }
-
-            // SOAL NOMOR 4
-            let buku = [
-                {"nama": "sherlock", "jumlah":2},
-                {"nama": "lupin", "jumlah":2},
-                {"nama": "aladin", "jumlah":2},
-            ]
-        </script>
-    </head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Profil dan Peminjaman Buku</title>
+            <script>
+                // SOAL NOMOR 4
+                let buku = [
+                    {"nama": "sherlock", "jumlah":2},
+                    {"nama": "lupin", "jumlah":2},
+                    {"nama": "aladin", "jumlah":2},
+                ]
+                // SOAL NOMOR 3
+                function cekBuku() {
+                    var jumlah = document.getElementById('jumlah').value;
+                    var bukuDipilih = document.getElementById('buku').value;
+                    // SOAL NOMOR 5
+                    if (jumlah === '' || parseInt(jumlah) <= 0) {
+                      alert('Jumlah tidak boleh kosong atau Nol!');
+                      return;
+                    }
+                    // NOMOR 6
+                    var bukuTersedia = buku.find(b => b.nama === bukuDipilih);
+                    if (!bukuTersedia) {
+                      alert('Buku tidak ditemukan!');
+                      return;
+                    }
+                    // NOMOR 7
+                    if (parseInt(jumlah) > bukuTersedia.jumlah) {
+                      alert('Jumlah buku tidak tersedia!');
+                      return;
+                    }
+                    // NOMOR 8
+                    alert('Silahkan ambil buku Anda!');
+                } 
+            </script>
+        </head>
 
     <!-- SOAL NOMOR 1 -->
     <body>
