--- a/index.html
+++ b/index.html
@@ -1,60 +1,61 @@
 <!DOCTYPE html>
-<html lang="Id">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Profil dan Peminjaman Buku</title>
-            <script>
-                // SOAL NOMOR 4
-                let buku = [
-                    {"nama": "sherlock", "jumlah":2},
-                    {"nama": "lupin", "jumlah":2},
-                    {"nama": "aladin", "jumlah":2},
-                ]
-                // SOAL NOMOR 3
-                function cekBuku() {
-                    var jumlah = document.getElementById('jumlah').value;
-                    var bukuDipilih = document.getElementById('buku').value;
-                    // SOAL NOMOR 5
-                    if (jumlah === '' || parseInt(jumlah) <= 0) {
-                      alert('Jumlah tidak boleh kosong atau Nol!');
-                      return;
-                    }
-                    // NOMOR 6
-                    var bukuTersedia = buku.find(b => b.nama === bukuDipilih);
-                    if (!bukuTersedia) {
-                      alert('Buku tidak ditemukan!');
-                      return;
-                    }
-                    // NOMOR 7
-                    if (parseInt(jumlah) > bukuTersedia.jumlah) {
-                      alert('Jumlah buku tidak tersedia!');
-                      return;
-                    }
-                    // NOMOR 8
-                    alert('Silahkan ambil buku Anda!');
-                } 
-            </script>
-        </head>
+<html lang="id">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Profil dan Peminjaman Buku</title>
+<script>
+// NOMOR 4
+let buku = [
+  {"nama": "sherlock", "jumlah": 2},
+  {"nama": "lupin", "jumlah": 2},
+  {"nama": "aladin", "jumlah": 2},
+];
+// NOMOR 3
+function cekBuku() {
+  var jumlah = document.getElementById('jumlah').value;
+  var bukuDipilih = document.getElementById('buku').value;
+//   NOMOR 5
+  if (jumlah === '' || parseInt(jumlah) <= 0) {
+    alert('Jumlah tidak boleh kosong atau Nol!');
+    return;
+  }
+//   NOMOR 6
+  var bukuTersedia = buku.find(b => b.nama === bukuDipilih);
+  if (!bukuTersedia) {
+    alert('Buku tidak ditemukan!');
+    return;
+  }
+//   NOMOR 7
+  if (parseInt(jumlah) > bukuTersedia.jumlah) {
+    alert('Jumlah buku tidak tersedia!');
+    return;
+  }
+//   NOMOR 8
+  alert('Silahkan ambil buku Anda!');
+}
+</script>
+</head>
+<body>
 
-    <!-- SOAL NOMOR 1 -->
-    <body>
-        <div>
-            <img src="Foto Formal_Delita Noor Iftitah.jpg" alt="Profil Saya" width="200" height="300">
-            <h1>Nama : Delita Noor Iftitah</h1>
-            <h2>NIM : 6701223082</h2>
-            <h2>Kelas : D3SI 46-01</h2>
-        </div>
+<!-- NOMOR 1 -->
+<div>
+  <img src="Foto Formal_Delita Noor Iftitah.jpg" alt="Profil Saya" width="200" height="300">
+  <h1>Nama: Nama Anda</h1>
+  <h2>NIM: NIM Anda</h2>
+  <h2>Kelas: Kelas Anda</h2>
+</div>
 
-        <!-- SOAL NOMOR 2 -->
-        <div>
-            <input type="text" id="jumlah" placeholder="Jumlah Buku">
-            <select id="'buku">
-                <option value="sherlok">Sherlok</option>
-                <option value="lupin">Lupin</option>
-                <option value="aladin">Aladin</option>
-            </select>
-            <button onclick="cekBuku()">Cek Ketersediaan</button>
-        </div>
-    </body>
+<!-- NOMOR 2 -->
+<div>
+  <input type="text" id="jumlah" placeholder="Jumlah Buku">
+  <select id="buku">
+    <option value="sherlock">Sherlock</option>
+    <option value="lupin">Lupin</option>
+    <option value="aladin">Aladin</option>
+  </select>
+  <button onclick="cekBuku()">Cek Ketersediaan</button>
+</div>
+
+</body>
 </html>
